--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,8 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@500&family=Roboto:wght@400;700&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@500&family=Poppins&family=Roboto:wght@400;700&display=swap');
 *,
 html,
 body {
@@ -11,8 +10,45 @@ body {
   box-sizing:border-box;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    font-size:18px;
 }
 
-h1, h2 {
+h1, h2, h3, h4, h5, h6, .nav-link {
   font-family: 'JetBrains Mono', monospace !important;
+}
+
+p {
+  font-family: 'Poppins', sans-serif;
+}
+
+
+
+.markdown-content {
+  width:700px;
+  max-width:100%;
+  margin:0 auto;
+}
+
+.content p,
+.content h1,
+.content h2,
+.content h3,
+.content h4,
+.content h5,
+.content h6,
+.content p { 
+  color:rgb(187, 205, 232);
+  line-height: 2;
+}
+
+.content p {
+  text-align:justify;
+}
+.blog-post-image {
+  height:400px;
+  margin:0 auto;
+  object-fit:cover;
+  width:700px;
+  max-width:100%;
+  border-radius:7px;
 }
