--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,7 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@500&family=Poppins&family=Roboto:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@200;400;700&display=swap');
 *,
 html,
 body {
@@ -14,11 +14,11 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6, .nav-link {
-  font-family: 'JetBrains Mono', monospace !important;
+  font-family: 'Outfit', sans-serif !important;
 }
 
 p {
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Poppins', sans-serif !important;
 }
 
 
