--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,24 +1,25 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@200;400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500;600;700&display=swap');
 *,
 html,
 body {
   padding: 0;
   margin: 0;
   box-sizing:border-box;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-    font-size:18px;
+  font-family: 'Poppins', sans-serif;
+  font-size:18px;
 }
 
 h1, h2, h3, h4, h5, h6, .nav-link {
-  font-family: 'Outfit', sans-serif !important;
+  font-family: 'Poppins', sans-serif;
+  font-weight:bold;
 }
 
 p {
-  font-family: 'Poppins', sans-serif !important;
+  font-family: 'Poppins', sans-serif;
+  font-weight:500;
 }
 
 
